golang-simple-app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-simple-app
  namespace: golang
spec:
  type: ClusterIP
  selector:
    app: golang-simple-app
  ports:
    - port: 8080
  - port: 8080
    protocol: TCP
    targetPort: 8080
