golang-simple-app-data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-simple-app-data
  namespace: golang
spec:
  type: ClusterIP
  selector:
    app: golang-simple-app-data
  ports:
    - port: 8080
  - port: 8080
    protocol: TCP
    targetPort: 8080
